--- a/app/views/operations/_line_fields.html.haml
+++ b/app/views/operations/_line_fields.html.haml
@@ -3,39 +3,27 @@
 .nested-fields
   =link_to_remove_association('labels.remove_line'.t, f, :class => 'nested-remove remove-line')
   =f.input(:direction, :wrapper_html => {:id => 'direction-field'})
-  #product-field.control-group
+  #product-field.control-group.selector.required
     %label.control-label.required{:for => 'operation_line-product-input'}
       %abbr{:title => 'required'} *
       =OperationLine.human_attribute_name('product')
     .controls
-      =selector(:operation_line, :product, {:controller=>"products", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-product-input', :class => 'selector required')
-      -for error in operation_line.errors['product_id']
+      =selector(:operation_line, :product, {:controller=>"products", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-product-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :products, :action => :new}, 'data-new-item' => 'operation_line-product-input', :class => 'btn btn-new')
+      -for error in operation_line.errors['product']
         %span.help-inline=error
-      %span.btn-toolbar
-        =link_to({:controller => :products, :action => :new}, 'data-new-item' => 'operation_line-product-input', :class => 'btn btn-new') do
-          %span.icon
-          %span.text='labels.new'.t
   =f.input(:quantity, :wrapper_html => {:id => 'quantity-field'})
-  #tracking-field.control-group
-    %label.control-label{:for => 'operation_line-tracking-input'}
+  #tracking-field.control-group.selector.optional
+    %label.control-label.optional{:for => 'operation_line-tracking-input'}
       =OperationLine.human_attribute_name('tracking')
     .controls
-      =selector(:operation_line, :tracking, {:controller=>"trackings", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-tracking-input', :class => 'selector')
-      -for error in operation_line.errors['tracking_id']
+      =selector(:operation_line, :tracking, {:controller=>"trackings", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-tracking-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :trackings, :action => :new}, 'data-new-item' => 'operation_line-tracking-input', :class => 'btn btn-new')
+      -for error in operation_line.errors['tracking']
         %span.help-inline=error
-      %span.btn-toolbar
-        =link_to({:controller => :trackings, :action => :new}, 'data-new-item' => 'operation_line-tracking-input', :class => 'btn btn-new') do
-          %span.icon
-          %span.text='labels.new'.t
-  #warehouse-field.control-group
+  #warehouse-field.control-group.selector.required
     %label.control-label.required{:for => 'operation_line-warehouse-input'}
       %abbr{:title => 'required'} *
       =OperationLine.human_attribute_name('warehouse')
     .controls
-      =selector(:operation_line, :warehouse, {:controller=>"warehouses", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-warehouse-input', :class => 'selector required')
-      -for error in operation_line.errors['warehouse_id']
+      =selector(:operation_line, :warehouse, {:controller=>"warehouses", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-warehouse-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :warehouses, :action => :new}, 'data-new-item' => 'operation_line-warehouse-input', :class => 'btn btn-new')
+      -for error in operation_line.errors['warehouse']
         %span.help-inline=error
-      %span.btn-toolbar
-        =link_to({:controller => :warehouses, :action => :new}, 'data-new-item' => 'operation_line-warehouse-input', :class => 'btn btn-new') do
-          %span.icon
-          %span.text='labels.new'.t
