--- a/app/views/animal_events/_diagnostic_fields.html.haml
+++ b/app/views/animal_events/_diagnostic_fields.html.haml
@@ -4,14 +4,10 @@
   =link_to_remove_association('labels.remove_diagnostic'.t, f, :class => 'nested-remove remove-diagnostic')
   =f.input(:symptoms, :readonly => !animal_diagnostic.new_record?, :wrapper_html => {:id => 'symptoms-field'})
   =f.input(:corpse_location, :readonly => !animal_diagnostic.new_record?, :wrapper_html => {:id => 'corpse-location-field'})
-  #disease-field.control-group
-    %label.control-label{:for => 'animal_diagnostic-disease-input'}
+  #disease-field.control-group.selector.optional
+    %label.control-label.optional{:for => 'animal_diagnostic-disease-input'}
       =AnimalDiagnostic.human_attribute_name('disease')
     .controls
-      =selector(:animal_diagnostic, :disease, {:controller=>"animal_diseases", :action=>:unroll}, {:object => animal_diagnostic}, :id => 'animal_diagnostic-disease-input', :class => 'selector')
-      -for error in animal_diagnostic.errors['disease_id']
+      =selector(:animal_diagnostic, :disease, {:controller=>"animal_diseases", :action=>:unroll}, {:object => animal_diagnostic}, :id => 'animal_diagnostic-disease-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :animal_diseases, :action => :new}, 'data-new-item' => 'animal_diagnostic-disease-input', :class => 'btn btn-new')
+      -for error in animal_diagnostic.errors['disease']
         %span.help-inline=error
-      %span.btn-toolbar
-        =link_to({:controller => :animal_diseases, :action => :new}, 'data-new-item' => 'animal_diagnostic-disease-input', :class => 'btn btn-new') do
-          %span.icon
-          %span.text='labels.new'.t
