--- a/app/views/operations/_use_fields.html.haml
+++ b/app/views/operations/_use_fields.html.haml
@@ -2,15 +2,11 @@
 -operation_use ||= f.object
 .nested-fields
   =link_to_remove_association('labels.remove_use'.t, f, :class => 'nested-remove remove-use')
-  #tool-field.control-group
+  #tool-field.control-group.selector.required
     %label.control-label.required{:for => 'operation_use-tool-input'}
       %abbr{:title => 'required'} *
       =OperationUse.human_attribute_name('tool')
     .controls
-      =selector(:operation_use, :tool, {:controller=>"tools", :action=>:unroll}, {:object => operation_use}, :id => 'operation_use-tool-input', :class => 'selector required')
-      -for error in operation_use.errors['tool_id']
+      =selector(:operation_use, :tool, {:controller=>"tools", :action=>:unroll}, {:object => operation_use}, :id => 'operation_use-tool-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :tools, :action => :new}, 'data-new-item' => 'operation_use-tool-input', :class => 'btn btn-new')
+      -for error in operation_use.errors['tool']
         %span.help-inline=error
-      %span.btn-toolbar
-        =link_to({:controller => :tools, :action => :new}, 'data-new-item' => 'operation_use-tool-input', :class => 'btn btn-new') do
-          %span.icon
-          %span.text='labels.new'.t
