--- a/app/views/purchase_lines/_price_fields.html.haml
+++ b/app/views/purchase_lines/_price_fields.html.haml
@@ -2,29 +2,21 @@
 -price ||= f.object
 .nested-fields
   =link_to_remove_association('labels.remove_price'.t, f, :class => 'nested-remove remove-price')
-  #category-field.control-group
+  #category-field.control-group.selector.required
     %label.control-label.required{:for => 'price-category-input'}
       %abbr{:title => 'required'} *
       =Price.human_attribute_name('category')
     .controls
-      =selector(:price, :category, {:controller=>"entity_categories", :action=>:unroll}, {:object => price}, :id => 'price-category-input', :class => 'selector required')
-      -for error in price.errors['category_id']
+      =selector(:price, :category, {:controller=>"entity_categories", :action=>:unroll}, {:object => price}, :id => 'price-category-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :entity_categories, :action => :new}, 'data-new-item' => 'price-category-input', :class => 'btn btn-new')
+      -for error in price.errors['category']
         %span.help-inline=error
-      %span.btn-toolbar
-        =link_to({:controller => :entity_categories, :action => :new}, 'data-new-item' => 'price-category-input', :class => 'btn btn-new') do
-          %span.icon
-          %span.text='labels.new'.t
   =f.input(:pretax_amount, :wrapper_html => {:id => 'pretax-amount-field'})
-  #tax-field.control-group
+  #tax-field.control-group.selector.required
     %label.control-label.required{:for => 'price-tax-input'}
       %abbr{:title => 'required'} *
       =Price.human_attribute_name('tax')
     .controls
-      =selector(:price, :tax, {:controller=>"taxes", :action=>:unroll}, {:object => price}, :id => 'price-tax-input', :class => 'selector required')
-      -for error in price.errors['tax_id']
+      =selector(:price, :tax, {:controller=>"taxes", :action=>:unroll}, {:object => price}, :id => 'price-tax-input', :class => 'selector required') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :taxes, :action => :new}, 'data-new-item' => 'price-tax-input', :class => 'btn btn-new')
+      -for error in price.errors['tax']
         %span.help-inline=error
-      %span.btn-toolbar
-        =link_to({:controller => :taxes, :action => :new}, 'data-new-item' => 'price-tax-input', :class => 'btn btn-new') do
-          %span.icon
-          %span.text='labels.new'.t
   =f.input(:currency, :collection => currencies, :wrapper_html => {:id => 'currency-field'})
