Fixes last bugs due to general use of attr_accessible in all models
Fixes #98. Permits to generalize custom_fields transparently with the
new unified mass-assignment management (See #83).

--- a/app/views/journal_entries/_form.html.haml
+++ b/app/views/journal_entries/_form.html.haml
@@ -1,5 +1,5 @@
 =field_set do
-  -input :journal, :readonly => true
+  -association :journal, :readonly => true
   -input :number
   -input :printed_on
   -partial :exchange_rate, :depend_on => [:printed_on, :journal], :refresh_url => new_journal_entry_url
