--- a/app/views/animals/show.html.haml
+++ b/app/views/animals/show.html.haml
@@ -13,9 +13,9 @@
       -l.attribute :sex
       -l.attribute :mother, :url => true
       -l.attribute :identification_number
-      -l.attribute :income_on
-      -l.attribute :income_reasons
-      -l.attribute :outgone_on
+      -l.attribute :arrived_on
+      -l.attribute :arrival_reasons
+      -l.attribute :departed_on
       -l.attribute :comment
     -if @animal.picture.exists?
       =image_tag(@animal.picture.url(:thumb))
