--- a/app/views/animal_races/_form.html.haml
+++ b/app/views/animal_races/_form.html.haml
@@ -1,5 +1,5 @@
 -field_set do
-  -association :nature, :as => :radio_buttons
+  -association :parent
   -input :name
   -input :code
   -input :description
