--- a/app/views/animal_events/_treatment_fields.html.haml
+++ b/app/views/animal_events/_treatment_fields.html.haml
@@ -3,14 +3,6 @@
 .nested-fields
   =link_to_remove_association('labels.remove_treatment'.t, f, :class => 'nested-remove remove-treatment')
   =f.input(:started_at, :wrapper_html => {:id => 'started-at-field'})
-  =f.input(:quantity, :wrapper_html => {:id => 'quantity-field'})
-  #quantity-unit-field.control-group.selector.optional
-    %label.control-label.optional{:for => 'animal_treatment-quantity_unit-input'}
-      =AnimalTreatment.human_attribute_name('quantity_unit')
-    .controls
-      =selector(:animal_treatment, :quantity_unit, {:controller=>"units", :action=>:unroll}, {:object => animal_treatment}, :id => 'animal_treatment-quantity_unit-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :units, :action => :new}, 'data-new-item' => 'animal_treatment-quantity_unit-input', :class => 'btn btn-new')
-      -for error in animal_treatment.errors['quantity_unit']
-        %span.help-inline=error
   #drug-field.control-group.selector.optional
     %label.control-label.optional{:for => 'animal_treatment-drug-input'}
       =AnimalTreatment.human_attribute_name('drug')
@@ -18,6 +10,9 @@
       =selector(:animal_treatment, :drug, {:controller=>"animal_drugs", :action=>:unroll}, {:object => animal_treatment}, :id => 'animal_treatment-drug-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :animal_drugs, :action => :new}, 'data-new-item' => 'animal_treatment-drug-input', :class => 'btn btn-new')
       -for error in animal_treatment.errors['drug']
         %span.help-inline=error
+  =f.input(:quantity, :wrapper_html => {:id => 'quantity-field'})
+  =f.input(:quantity_interval, :wrapper_html => {:id => 'quantity-interval-field'})
+  =f.input(:quantity_delay, :wrapper_html => {:id => 'quantity-delay-field'})
   #prescription-field.control-group.selector.optional
     %label.control-label.optional{:for => 'animal_treatment-prescription-input'}
       =AnimalTreatment.human_attribute_name('prescription')
@@ -25,7 +20,3 @@
       =selector(:animal_treatment, :prescription, {:controller=>"animal_prescriptions", :action=>:unroll}, {:object => animal_treatment}, :id => 'animal_treatment-prescription-input', :class => 'selector optional') + link_to(('<span class="icon"></span><span class="text">' + h('labels.new'.t) + '</span>').html_safe, {:controller => :animal_prescriptions, :action => :new}, 'data-new-item' => 'animal_treatment-prescription-input', :class => 'btn btn-new')
       -for error in animal_treatment.errors['prescription']
         %span.help-inline=error
-  =f.input(:duration_wait_for_milk, :wrapper_html => {:id => 'duration-wait-for-milk-field'})
-  =f.input(:duration_unit_wait_for_milk, :wrapper_html => {:id => 'duration-unit-wait-for-milk-field'})
-  =f.input(:duration_wait_for_meat, :wrapper_html => {:id => 'duration-wait-for-meat-field'})
-  =f.input(:duration_unit_wait_for_meat, :wrapper_html => {:id => 'duration-unit-wait-for-meat-field'})
