--- a/app/views/animal_posologies/_form.html.haml
+++ b/app/views/animal_posologies/_form.html.haml
@@ -1,15 +1,18 @@
--field_set do
-  -input :name
-
--field_set(:animal) do |f|
-  -association :animal_race_nature
-
 -field_set(:drug) do
   -association :drug
-  -input :quantity
+  -input :currative_quantity
+  -input :preventive_quantity
   -association :quantity_unit
-  -input :per_animal_unit
-  -input :drug_admission_path
+  -input :quantity_delay
+  -input :quantity_interval
+  -input :drug_admission_way
 
--field_set(:disease) do
+-field_set(:animal) do |f|
+  -association :animal_race
+
+-field_set(:care) do
   -association :disease
+
+-field_set(:product) do
+  -association :product_category
+  -input :product_category_waiting_delay
