--- a/app/views/animal_races/show.html.haml
+++ b/app/views/animal_races/show.html.haml
@@ -4,5 +4,6 @@
   -t.destroy(@animal_race, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_race.destroyable?
 
 =attributes_list(@animal_race) do |l| # liste des champs à afficher
+  -l.attribute :parent
   -l.attribute :name
   -l.attribute :code
