--- a/app/views/animal_treatments/_form.html.haml
+++ b/app/views/animal_treatments/_form.html.haml
@@ -2,24 +2,15 @@
   -input :name
   -association :prescription, :include_blank => true, :default_value => :blank
 
--field_set(:disease) do
-  -association :disease, :include_blank => true, :default_value => :blank
-
-
 -field_set(:drug) do
   -association :drug, :include_blank => true, :default_value => :blank
   -input :quantity
-  -association :quantity_unit
-  -input :per_animal_unit
+  -input :quantity_interval
+  -input :quantity_delay
+  -input :drug_admission_way
 
 -field_set(:care) do
-  -input :duration
-  -input :per_duration_time_unit
-  -input :frequency
-  -input :per_frequency_time_unit
+  -association :disease, :include_blank => true, :default_value => :blank
 
 -field_set(:delay) do
-  -input :duration_wait_for_milk
-  -input :duration_unit_wait_for_milk
-  -input :duration_wait_for_meat
-  -input :duration_unit_wait_for_meat
+  -input :started_at
