--- a/app/views/entity_links/_form.html.haml
+++ b/app/views/entity_links/_form.html.haml
@@ -1,4 +1,4 @@
 -# TODO Manage permutations in forms ?
 =field_set do
-  -input :entity_1, :permute_with => :entity_2
-  -input :entity_2, :permute_with => :entity_1
+  -association :entity_1, :permute_with => :entity_2
+  -association :entity_2, :permute_with => :entity_1
