--- a/app/views/purchase_natures/_form.html.haml
+++ b/app/views/purchase_natures/_form.html.haml
@@ -6,7 +6,7 @@
   -input :comment, :field => :text
 
 -field_set :accountancy do
-  -input :journal
+  -association :journal, :source => :purchases
 
 
 
