--- a/app/views/subscriptions/_form.html.haml
+++ b/app/views/subscriptions/_form.html.haml
@@ -4,7 +4,7 @@
   -association :nature
   -input :quantity
   -# input :suspended
-  -input :address
+  -association :address
   -input :comment
 
 -field_set :interval, :depend_on => :nature do
